--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -18,12 +18,23 @@
     <body>
         <div id="webcrumbs">
             <div class="w-[1200px] h-screen p-6 font-sans bg-gray-50 overflow-hidden">
+                <div id="chapterModal" class="modal">
+                    <div class="modal-content">
+                        <span class="close-btn bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2">&times;</span>
+
+                        <h2 class="text-2xl font-bold text-gray-800 h2-modal">Добавление главы статистики</h2>
+                        <input id="chapterInput" class="input-field-modal w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 in-edit-mode" type="text" placeholder="Наименование главы" />
+
+                        <button id="saveChapter" class="w-full py-3 px-4 bg-green-600 text-white rounded-lg shadow-md font-medium transition-all hover:bg-green-700 hover:shadow-lg 
+                            focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 flex items-center justify-center gap-2">Сохранить</button>
+                    </div>
+                </div>
                 <header class="mb-6">
                     <div class="flex justify-between items-center mb-4 py-3 px-4 bg-white shadow-sm rounded-lg">
                         <div class="text-gray-700 font-medium">Добро пожаловать, пользователь!</div>
                         <div class="text-xl font-bold text-primary-600">Система планирования производственных планов</div>
                         <button
-                            class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2"
+                            class="px-4 py-2 bg-red-500 text-white hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2"
                         >
                             <span class="material-symbols-outlined text-sm">Выйти</span>
                         </button>
@@ -44,6 +55,11 @@
                         class="main-btn px-6 py-3 bg-gray-200 text-gray-700
                         font-medium rounded-t-lg ml-2 transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50">
                         Многоотраслевая статистика
+                    </button>
+                    <button
+                        id="add-main-stat" class="px-6 py-3 bg-green-600 text-white 
+                        rounded-t-lg ml-2 shadow-sm font-medium transition-all hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 items-center">
+                        +
                     </button>
                 </div>
                 <div id="years-wrapper" class="w-[100%] bg-gray-100 p-4 border-r border-gray-200 overflow-y-auto mb-4">
@@ -81,7 +97,7 @@
                                 focus:ring-2 focus:ring-primary-500 focus:ring-opacity-50 active:bg-primary-100 button-margin">2025</button>
                         </div>
                     </div>
-                    <div id="add-year-button-section" class="mt-8">
+                    <div id="add-year-button-section" class="mt-8 add-button-section">
                         <button
                             class="w-[100%] py-3 px-4 bg-green-600 text-white rounded-lg shadow-md font-medium transition-all hover:bg-green-700 hover:shadow-lg 
                             focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 flex items-center justify-center gap-2 add-button"
@@ -90,7 +106,7 @@
                         </button>
                     </div>
                 </div>
-                                <div id="chapters-wrapper" class="w-[100%] bg-gray-100 p-4 border-r border-gray-200 overflow-y-auto mb-4">
+                <div id="chapters-wrapper" class="w-[100%] bg-gray-100 p-4 border-r border-gray-200 overflow-y-auto mb-4">
                     <div id="chapter-section" class="mb-6">
                         <div class="section-title">
                             <h2 id="current-chapter" class="text-xl font-semibold mb-2 text-gray-800">Главы статистики</h2>
@@ -135,6 +151,15 @@
                             class="chapter-btn w-[100%] py-3 px-4 bg-white border border-gray-300 rounded-lg shadow-sm font-medium text-gray-700
                                 transition-all hover:bg-primary-50 hover:border-primary-300 hover:transform hover:scale-[1.02] focus:outline-none
                                 focus:ring-2 focus:ring-primary-500 focus:ring-opacity-50 active:bg-primary-100 button-margin">Статистика культуры и отдыха</button>
+                            <div id="add-chapter-button-section" class="mt-8 add-button-section">
+                                <button
+                                    id="add-chapter-btn"
+                                    class="w-[100%] py-3 px-4 bg-green-600 text-white rounded-lg shadow-md font-medium transition-all hover:bg-green-700 hover:shadow-lg 
+                                    focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 flex items-center justify-center gap-2 add-button"
+                                >
+                                    <span class="material-symbols-outlined">add</span> Добавить главу
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -146,7 +171,7 @@
                                 <button
                                     id="add-approved-row" class="py-2 px-4 bg-green-600 text-white rounded-lg shadow-sm font-medium transition-all hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 flex items-center gap-2"
                                 >
-                                    <span class="material-symbols-outlined">add</span> Добавить строку
+                                    <span id="approved-add" class="material-symbols-outlined">add</span> Добавить строку
                                 </button>
                             </div>
                             </div>
@@ -816,7 +841,7 @@
                                                     class="input-field text-field"
                                                     role="textbox"
                                                     contenteditable="false">
-                                                1
+                                                2
                                                 </span>
                                             </div>
                                         </td>
@@ -1205,7 +1230,7 @@
                                                     class="input-field text-field"
                                                     role="textbox"
                                                     contenteditable="false">
-                                                1
+                                                3
                                                 </span>
                                             </div>
                                         </td>
@@ -1594,7 +1619,7 @@
                                                     class="input-field text-field"
                                                     role="textbox"
                                                     contenteditable="false">
-                                                1
+                                                4
                                                 </span>
                                             </div>
                                         </td>
@@ -1998,5 +2023,6 @@
         <script src="../js/dropdown-list-with-manual.js" defer></script>
         <script src="../js/dropdown-with-chosen-options.js" defer></script>
         <script src="../js/dropdown-hidden-columns.js" defer></script>
+        <script src="../js/modal-windows-func.js" defer></script>
     </body>
 </html>
