add: ajax for branches

--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -65,26 +65,6 @@
                     </div>
                 </header>
                 <div id="main-stats" class="tabs mb-4">
-                    <button
-                        class="main-btn px-6 py-3 bg-gray-200 text-gray-700
-                        font-medium rounded-t-lg ml-2 transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50">
-                        Демографическая статистика
-                    </button>
-                    <button
-                        class="main-btn px-6 py-3 bg-gray-200 text-gray-700
-                        font-medium rounded-t-lg ml-2 transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50">
-                        Экономическая статистика
-                    </button>
-                    <button
-                        class="main-btn px-6 py-3 bg-gray-200 text-gray-700
-                        font-medium rounded-t-lg ml-2 transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50">
-                        Многоотраслевая статистика
-                    </button>
-                    <button
-                        id="add-main-btn" class="px-6 py-3 bg-green-600 text-white 
-                        rounded-t-lg ml-2 shadow-sm font-medium transition-all hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 items-center">
-                        +
-                    </button>
                 </div>
                 <div id="years-wrapper" class="w-[100%] bg-gray-100 p-4 border-r border-gray-200 overflow-y-auto mb-4">
                     <div id="year-section" class="mb-6">
@@ -2063,5 +2043,6 @@
         <script src="../js/dropdown-hidden-columns.js" defer></script>
         <script src="../js/sort-table-func.js" defer></script>
         <script src="../js/modal-windows-func.js" defer></script>
+        <script src="../js/ajax-queries/branch-ajax.js" defer></script>
     </body>
 </html>
