--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -56,7 +56,7 @@
                 <header class="mb-6">
                     <div class="flex justify-between items-center mb-4 py-3 px-4 bg-white shadow-sm rounded-lg">
                         <div class="text-gray-700 font-medium">Добро пожаловать, пользователь!</div>
-                        <div class="text-xl font-bold text-primary-600">Система планирования производственных планов</div>
+                        <div class="text-xl font-bold text-primary-600">Система управления производственными планами</div>
                         <button
                             class="px-4 py-2 bg-red-500 text-white hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2"
                         >
