--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -20,7 +20,7 @@
             <div class="w-[1200px] h-screen p-6 font-sans bg-gray-50 overflow-hidden">
                 <div id="mainModal" class="modal">
                     <div class="modal-content">
-                        <span class="close-btn bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2">&times;</span>
+                        <span class="close-main-btn bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2">&times;</span>
 
                         <h2 class="text-2xl font-bold text-gray-800 h2-modal">Добавление раздела статистики</h2>
                         <input id="mainInput" class="input-field-modal w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 in-edit-mode" type="text" placeholder="Введите название раздела" />
@@ -31,9 +31,9 @@
                 </div>
                 <div id="yearModal" class="modal">
                     <div class="modal-content">
-                        <span class="close-btn bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2">&times;</span>
+                        <span class="close-years-btn bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2">&times;</span>
 
-                        <h2 class="text-2xl font-bold text-gray-800 h2-modal">Добавление года для выбранного раздела статистики</h2>
+                        <h2 class="text-2xl font-bold text-gray-800 h2-modal">Добавление года для выбранных разделов и глав статистики</h2>
                         <input id="yearInput" 
                         class="input-field-modal w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 
                         focus:border-primary-500 in-edit-mode" type="number" min="1900" max="2099" placeholder="Введите год" />
@@ -44,9 +44,9 @@
                 </div>
                 <div id="chapterModal" class="modal">
                     <div class="modal-content">
-                        <span class="close-btn bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2">&times;</span>
+                        <span class="close-chapters-btn bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2">&times;</span>
 
-                        <h2 class="text-2xl font-bold text-gray-800 h2-modal">Добавление главы статистики для выбранных раздела и года</h2>
+                        <h2 class="text-2xl font-bold text-gray-800 h2-modal">Добавление главы статистики для выбранного раздела</h2>
                         <input id="chapterInput" class="input-field-modal w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 in-edit-mode" type="text" placeholder="Введите наименование главы" />
 
                         <button id="saveChapter" class="w-full py-3 px-4 bg-green-600 text-white rounded-lg shadow-md font-medium transition-all hover:bg-green-700 hover:shadow-lg 
@@ -66,7 +66,7 @@
                 </header>
                 <div id="main-stats" class="tabs mb-4">
                 </div>
-                <div id="years-wrapper" class="w-[100%] bg-gray-100 p-4 border-r border-gray-200 overflow-y-auto mb-4">
+                <!-- <div id="years-wrapper" class="w-[100%] bg-gray-100 p-4 border-r border-gray-200 overflow-y-auto mb-4">
                     <div id="year-section" class="mb-6">
                         <div class="section-title">
                             <h2 id="current-year" class="text-xl font-semibold mb-2 text-gray-800">Года производственных планирований</h2>
@@ -110,7 +110,7 @@
                             <span class="material-symbols-outlined">add</span> Добавить год
                         </button>
                     </div>
-                </div>
+                </div> -->
                 <div id="chapters-wrapper" class="w-[100%] bg-gray-100 p-4 border-r border-gray-200 overflow-y-auto mb-4">
                     <div id="chapter-section" class="mb-6">
                         <div class="section-title">
@@ -120,7 +120,7 @@
                             </span>
                         </div>
                         <div id="chapter-buttons" class="space-y-3 grid">
-                            <button
+                            <!-- <button
                             class="chapter-btn w-[100%] py-3 px-4 bg-white border border-gray-300 rounded-lg shadow-sm font-medium text-gray-700
                                 transition-all hover:bg-primary-50 hover:border-primary-300 hover:transform hover:scale-[1.02] focus:outline-none 
                                 focus:ring-2 focus:ring-primary-500 focus:ring-opacity-50 active:bg-primary-100 button-margin">Статистика населения и миграции</button>
@@ -165,7 +165,7 @@
                                     <span class="material-symbols-outlined">add</span> Добавить главу
 
                                 </button>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                                         <td class="py-4 px-6 border-b border-gray-200 text-sm">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span
-                                                    class="input-field text-field"
+                                                    class="appointUser input-field text-field"
                                                     role="textbox"
                                                     contenteditable="false">
                                                 В.В. Тестовый-координатор
@@ -212,14 +212,14 @@
                                         </td>
                                         <td class="py-4 px-6 border-b border-gray-200 td-prop">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
-                                                <input id="job-span" type="text" class="datefield input-field" value="01.11.2025" disabled="false">
+                                                <input id="job-span" type="text" class="deadlineDate datefield input-field" value="01.11.2025" disabled="false">
                                             </div>
                                         </td>
                                         <td class="py-4 px-6 border-b border-gray-200">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span
                                                     id="job-span"
-                                                    class="input-field text-field"
+                                                    class="assignedUser input-field text-field"
                                                     role="textbox">
                                                     В.В. Тестовый-отраслевой (Специалист)
                                                 </span>
@@ -323,7 +323,7 @@
                                     <span class="material-symbols-outlined">file_copy</span> Копия на основе прошлого года
                                 </button>
                                 <button
-                                    class="py-2 px-4 bg-primary-600 text-white rounded-lg shadow-sm font-medium transition-all hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-opacity-50 flex items-center gap-2"
+                                    class="export-btn py-2 px-4 bg-primary-600 text-white rounded-lg shadow-sm font-medium transition-all hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-opacity-50 flex items-center gap-2"
                                 >
                                     <span class="material-symbols-outlined">download</span> Экспорт в .xls
                                 </button>
@@ -2030,10 +2030,20 @@
             <label class="block text-sm mb-1 font-medium text-gray-600">
                 Выберите для смены года:
             </label>
-            <select id="year-dropdown"
-                    class="px-3 py-2 border rounded-lg shadow-sm focus:ring-2 focus:ring-primary-500">
-            </select>
+        
+            <div class="flex gap-2 items-center">
+                <select id="year-dropdown"
+                        class="px-3 py-2 border rounded-lg shadow-sm focus:ring-2 focus:ring-primary-500 flex-1">
+                </select>
+                <button
+                    id="add-year-btn"
+                    class="add-button px-3 py-2 border rounded-lg shadow-sm focus:ring-2 focus:ring-primary-500 flex items-center justify-center gap-1"
+                >
+                    <span class="material-symbols-outlined">add</span>
+                </button>
+            </div>
         </div>
+        
         <script src="../js/years-chapters.js" defer></script>
         <script src="../js/table-edit-btn.js" defer></script>
         <script src="../js/dropdown-jobNames.js" defer></script>
@@ -2044,5 +2054,7 @@
         <script src="../js/sort-table-func.js" defer></script>
         <script src="../js/modal-windows-func.js" defer></script>
         <script src="../js/ajax-queries/branch-ajax.js" defer></script>
+        <script src="../js/ajax-queries/chapter-ajax.js" defer></script>
+        <script src="../js/ajax-queries/export-ajax.js" defer></script>
     </body>
 </html>
