fix: index.html link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href='../css/style-index.css' rel="stylesheet"/>
     </head>
     <body>
-      <form class="login" action="./mainPage-improved.html">
+      <form class="login" action="./html/mainPage-improved.html">
         <input type="email" placeholder="name@belstat.by">
         <input type="password" placeholder="Пароль">
         <button type="submit">Войти</button>
