fix: fonts now local, issue with action column and render of tables

--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -459,7 +459,7 @@
                                             Периодичность представления официальной статистической информации</th>
                                         <th id="table-head official_stat_info_recipient_org_col" class="sortable py-3-table px-6 text-center text-sm-table font-semibold text-gray-700 border-b" rowspan="1" colspan="1" scope="colgroup" data-field="officialStatInfoRecipientOrgRow">
                                             Наименование организации, в которую представляется официальная статистическая информация</th>
-                                        <th id="table-head action_buttons" class="py-3-table px-6 text-center text-sm-table font-semibold text-gray-700 border-b" rowspan="3" colspan="1" scope="colgroup" data-field="actionBtns">
+                                        <th id="table-head action_buttons" class="py-3-table px-6 text-center text-sm-table font-semibold text-gray-700 border-b" rowspan="3" colspan="1" scope="colgroup" data-field="actionBtns" data-ui-only="true">
                                             Действия
                                         </th>
                                     </tr>
